# wolfee-desktop-mac

./: .gitignore  PLAN-overlay-invisibility-fix.md  developerID_application.cer  electron-builder.yml  entitlements.plist  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  wolfee-bug-fix-2026-05-02.md  wolfee-copilot-subprompt-4-plan.md  wolfee-desktop-auth-recording-diagnosis-2026-05-01.md  wolfee-desktop-unified-ux-2026-05-21.md  wolfee-loom-recorder-bugfix-2026-05-21.md  wolfee-loom-recorder-investigation-2026-05-21.md  wolfee-recorder-ui-iteration1.md  wolfee-teleprompter-plan-2026-05-22.md
.github/workflows/: release.yml
docs/: BUILD.md  PLAN-auto-update-v0.7.0.md  PLAN-onboarding-wizard-v0.6.0.md  planning--recorder-redesign-plan.md  wolfee-copilot-subprompt-2-plan.md  wolfee-copilot-subprompt-3-plan.md  wolfee-copilot-subprompt-4.5-plan.md  wolfee-feedback-batch-2026-05-05-plan.md  wolfee-loom-recorder-phase1-testing.md
overlay/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
overlay/src/: CopilotOverlay.tsx  index.css  main.tsx  updater.ts
overlay/src/components/: ActionButtonsRow.tsx  ChatThread.tsx  ErrorBoundary.tsx  ExpandedPanel.tsx  FooterHint.tsx  InputBar.tsx  ReasoningIndicator.tsx  SessionCompleteCard.tsx  Strip.tsx  SuggestionCard.tsx  TeleprompterView.tsx  ThreadSwitcher.tsx  TopBar.tsx  TranscriptView.tsx  TranscriptZone.tsx  WelcomeCard.tsx
overlay/src/components/onboarding/: OnboardingWizard.tsx  Step3Pairing.tsx  Step4Permissions.tsx  StepLayout.tsx  illustrations.tsx  wizardCopy.ts
overlay/src/components/ui/: card.tsx
overlay/src/dev/: fixtures.ts  mockEvents.ts
overlay/src/lib/: copyToClipboard.ts  triggerLabels.ts
overlay/src/pages/: ContextWindow.tsx  ControlBar.tsx  Countdown.tsx  RecorderPanel.tsx  RegionSelector.tsx  WebcamBubble.tsx
overlay/src/state/: overlayReducer.ts  types.ts
scripts/: dev-install.sh  load-release-env.sh  notarize.js  release.js  upload-beta.js  verify.sh
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  lib.rs  main.rs  recorder.rs  state.rs  tray.rs  uploader.rs
src-tauri/src/copilot/: context_window.rs  hotkey.rs  mod.rs  state.rs  window.rs
src-tauri/src/copilot/audio/: mic.rs  mod.rs  mux.rs  permissions.rs  recorder.rs  recording_upload.rs  system_macos.rs
src-tauri/src/copilot/intelligence/: api.rs  heuristics.rs  mod.rs  moment_worker.rs  state.rs  suggest_client.rs  summary_worker.rs
src-tauri/src/copilot/session/: api.rs  mod.rs
src-tauri/src/copilot/transcribe/: buffer.rs  dedup.rs  deepgram.rs  mod.rs
src-tauri/src/recorder/: panel_window.rs  recording_ui.rs  region_selector.rs  screen_capture.rs  sources.rs  uploader_v2.rs  webcam_bubble.rs
src/main/: audioDevices.ts  hotkeys.ts  index.ts  pairing.ts  recordingState.ts  store.ts  tray.ts  updater.ts  widget.ts
src/main/recorder/: audioRecorder.ts  index.ts  screenRecorder.ts
src/main/uploader/: client.ts  queue.ts
src/preload/: index.ts
src/renderer/: index.html  pairing.html  setup-audio.html  widget.html
ui/: index.html
