[package]
name = "wolfee-desktop"
version = "0.2.1"
edition = "2021"
description = "Wolfee Desktop Recorder"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["multipart", "json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
urlencoding = "2"

# Sub-prompt 2 (Listening) — macOS audio capture + Deepgram WS
[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "1.5", features = ["macos_13_0"] }
core-graphics = "0.25"

[dependencies.cpal]
version = "0.17"

[dependencies.tokio-tungstenite]
version = "0.24"
features = ["rustls-tls-webpki-roots"]

[dependencies.rubato]
version = "0.16"

[dependencies.bytes]
version = "1"

# Sub-prompt 2 Phase 3 (Deepgram WS). Already a transitive dep via
# tokio-tungstenite — declared here so we can use SinkExt / StreamExt
# directly on WebSocketStream.
[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["std", "sink"]

# Sub-prompt 2 Phase 3. rustls 0.23 requires an explicit
# `CryptoProvider::install_default()` before any TLS connection;
# tokio-tungstenite + reqwest both pull rustls in transitively but
# never install. Without this, the first TLS handshake (Deepgram WS
# upgrade) panics on a tokio worker thread, killing connect_async
# silently. We declare rustls directly to call the API; the dep was
# already in Cargo.lock so the binary doesn't grow.
[dependencies.rustls]
version = "0.23"
default-features = false
features = ["ring", "std"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
