[package]
name = "wolfee-desktop"
version = "0.8.14"
edition = "2021"
description = "Wolfee Desktop Recorder"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
urlencoding = "2"

# Loom recorder Phase 1 — stream the recorded MP4 from disk to the
# presigned R2 URL. `tokio-util`'s ReaderStream + a hand-rolled
# progress Stream feed reqwest::Body::wrap_stream so the file is
# never read fully into memory. `futures-core` gives us the `Stream`
# trait for the progress wrapper. Both are already in Cargo.lock
# transitively (reqwest / tokio-tungstenite) — declaring direct just
# unlocks the API without growing the binary.
tokio-util = { version = "0.7", features = ["io"] }
futures-core = "0.3"

# Copilot per-session recording (Phase 1). The mux pump tees its
# 16 kHz int16 stereo AudioFrames into a WAV file alongside Deepgram,
# then macOS's built-in `afconvert` re-encodes to M4A on session end.
# hound is a small, pure-Rust WAV writer; no system deps.
hound = "3"

# Sub-prompt 2 (Listening) — macOS audio capture + Deepgram WS
[target.'cfg(target_os = "macos")'.dependencies]
# Loom recorder Phase 1 bumps the feature from macos_13_0 to
# macos_15_0: `SCRecordingOutput` (direct-to-MP4 hardware H.264
# encoding) and `SCStreamConfiguration::captures_microphone` are
# macOS 15.0 APIs. macos_15_0 transitively enables macos_13_0, so
# the existing Copilot system-audio capture is unaffected. The
# recorder feature itself is runtime-gated (see screen_capture.rs)
# so the app still launches on macOS 13/14.
screencapturekit = { version = "1.5", features = ["macos_15_0"] }
core-graphics = "0.25"

# Sub-prompt 4 fix 2026-05-03 — overlay must float above fullscreen
# apps. Tauri's `always_on_top` only sets NSFloatingWindowLevel (3),
# which is below the level fullscreen apps render at. We bump to
# NSScreenSaverWindowLevel (1000) — the level macOS uses for the
# volume HUD, which appears above fullscreen content. Both crates
# are already in Cargo.lock via screencapturekit; declaring direct
# gives us API access without binary growth.
objc2 = "0.6"
objc2-app-kit = "0.3"

[dependencies.cpal]
version = "0.17"

[dependencies.tokio-tungstenite]
version = "0.24"
features = ["rustls-tls-webpki-roots"]

[dependencies.rubato]
version = "0.16"

[dependencies.bytes]
version = "1"

# Sub-prompt 2 Phase 3 (Deepgram WS). Already a transitive dep via
# tokio-tungstenite — declared here so we can use SinkExt / StreamExt
# directly on WebSocketStream.
[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["std", "sink"]

# Sub-prompt 2 Phase 3. rustls 0.23 requires an explicit
# `CryptoProvider::install_default()` before any TLS connection;
# tokio-tungstenite + reqwest both pull rustls in transitively but
# never install. Without this, the first TLS handshake (Deepgram WS
# upgrade) panics on a tokio worker thread, killing connect_async
# silently. We declare rustls directly to call the API; the dep was
# already in Cargo.lock so the binary doesn't grow.
[dependencies.rustls]
version = "0.23"
default-features = false
features = ["ring", "std"]

# Sub-prompt 3 (Intelligence). Streaming-Server-Sent-Events parser
# for the /suggest endpoint's SSE response. Generic byte-stream
# parser — composes cleanly with reqwest::Response::bytes_stream().
# Lightweight, no transitive web framework deps.
[dependencies.eventsource-stream]
version = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
